--- a/themes/sagiri/_config.yml
+++ b/themes/sagiri/_config.yml
@@ -638,7 +638,7 @@ motion:
     sidebar: slideUpIn
 
 # Fancybox
-fancybox: false
+fancybox: true
 
 # Progress bar in the top during page loading.
 pace: false
