修改主题信息

--- a/themes/Sakura/_config.yml
+++ b/themes/Sakura/_config.yml
@@ -1,9 +1,9 @@
 # site name
-prefixName: さくら荘その
-siteName: hojun
+prefixName: 摸鱼划水の
+siteName: 文文
 # favicon and site master avatar
 favicon: /images/favicon.ico
-avatar: /img/custom/avatar.jpg
+avatar: /img/custom/amtoaer.png
 url: https://allwens.work
 description: 今宵酒醒何处？杨柳岸，晓风残月。
 cdn: https://cdn.jsdelivr.net/gh/amtoaer/cdn@master
