暂且替换回原始链接，使用hexo-all-minifier压缩资源

--- a/_config.yml
+++ b/_config.yml
@@ -92,3 +92,36 @@ feed:
   content_limit: 140
   content_limit_delim: '<!--more-->'
   order_by: -date
+
+# hexo-all-minifier
+js_concator:
+  enable: false
+  bundle_path: '/js/bundle.js'
+  front: false
+  silent: false
+html_minifier:
+  enable: true
+  ignore_error: false
+  silent: false
+  exclude:
+css_minifier:
+  enable: true
+  silent: false
+  exclude: 
+    - '*.min.css'
+js_minifier:
+  enable: true
+  mangle: true
+  silent: false
+  output:
+  compress:
+  exclude: 
+    - '*.min.js'
+image_minifier:
+  enable: false
+  interlaced: false
+  multipass: false
+  optimizationLevel: 2
+  pngquant: false
+  progressive: false
+  silent: false
