更新首页的社交网站链接

--- a/themes/Sakura/_config.yml
+++ b/themes/Sakura/_config.yml
@@ -6,7 +6,7 @@ favicon: /images/favicon.ico
 avatar: /img/custom/amtoaer.png
 url: https://allwens.work
 description: 今宵酒醒何处？杨柳岸，晓风残月。
-cdn: //cdn.jsdelivr.net/gh/amtoaer/blog-cdn@2.2
+cdn: //cdn.jsdelivr.net/gh/amtoaer/blog-cdn@2.3
 pjax: 1
 # 1开启
 mathjax: 1
@@ -72,12 +72,20 @@ siteBuildingTime: 07/12/2018
 
 #social  url, img PC端配置
 social:
-  github: {url: http://github.com/amtoaer, img: /img/social/github.png}
+  github: {url: http://github.com/amtoaer, img: /img/social/github.svg}
+  netease-music: {url: https://music.163.com/#/user/home?id=413148812, img: /img/social/netease-cloud-music-fill.svg}
+  telegram: {url: https://t.me/JeasonLau, img: /img/social/telegram.svg}
+  twitter: {url: https://twitter.com/amtoaer, img: /img/social/twitter.svg}
+  bilibili: {url: https://space.bilibili.com/9183758, img: /img/social/bilibili.svg}
+  instagram: {url: https://www.instagram.com/amtoaer/, img: /img/social/instagram.svg}
+  zhihu: {url: https://www.zhihu.com/people/ba-qi-chao-qun-zhu, img: /img/social/zhihu.svg}
   email: {url: mailto:amtoaer@outlook.com, img: /img/social/email.svg}
 
 #social  url, img 移动端配置
 msocial:
-  github: {url: http://github.com/amtoaer, fa: fa-github, color: 333}
+  github: {url: http://github.com/amtoaer, fa: fa-github-alt, color: 333}
+  telegram: {url: https://t.me/JeasonLau, fa: fa-telegram, color: 333}
+  twitter: {url: https://twitter.com/amtoaer, fa: fa-twitter, color: 333}
 
 donate:
   paypal: https://www.paypal.me/hojuncn
