修复文章底部的图片加载/作者信息问题

--- a/themes/Sakura/_config.yml
+++ b/themes/Sakura/_config.yml
@@ -119,3 +119,4 @@ v_appKey: wfyWbG3H3Yxfwq2KLiphW0NI
 # author info
 author: amtoaer
 authorLink: https://allwens.work
+authorAbout: 今宵酒醒何处？杨柳岸，晓风残月。
