--- a/themes/Sakura/_config.yml
+++ b/themes/Sakura/_config.yml
@@ -6,7 +6,7 @@ favicon: /images/favicon.ico
 avatar: /img/custom/amtoaer.png
 url: https://allwens.work
 description: 今宵酒醒何处？杨柳岸，晓风残月。
-cdn: //cdn.jsdelivr.net/gh/amtoaer/blog-cdn@2.3
+cdn: //allwens-work.oss-cn-beijing.aliyuncs.com
 pjax: 1
 # 1开启
 mathjax: 1
@@ -88,10 +88,10 @@ msocial:
   twitter: {url: https://twitter.com/amtoaer, fa: fa-twitter, color: 333}
 
 donate:
-  paypal: https://www.paypal.me/hojuncn
-  alipay: /img/custom/donate/AliPayQR.jpg
-  wechat: /img/custom/donate/WeChanQR.jpg
-  wechatSQ: /img/custom/donate/WeChanSQ.jpg
+  # paypal: https://www.paypal.me/hojuncn
+  alipay: /images/alipay.png
+  wechat: /images/wechatpay.png
+  # wechatSQ: /img/custom/donate/WeChanSQ.jpg
 
 # 视频地址为https://cdn.jsdelivr.net/gh/honjun/hojun@1.2/Unbroken.mp4，配置如下
 movies:
