加入站点地图，方便搜索引擎爬取

--- a/_config.yml
+++ b/_config.yml
@@ -124,3 +124,10 @@ image_minifier:
   pngquant: false
   progressive: false
   silent: false
+
+# sitemap
+sitemap:
+  path: sitemap.xml
+  rel: false
+  tags: false
+  categories: false
