--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "hexo-generator-feed": "^1.2.2",
     "hexo-generator-index": "^0.2.1",
     "hexo-generator-json-content": "^2.2.0",
+    "hexo-generator-sitemap": "^2.1.0",
     "hexo-generator-tag": "^0.2.0",
     "hexo-git-backup": "^0.1.2",
     "hexo-renderer-ejs": "^0.3.1",
