--- a/themes/Sakura/_config.yml
+++ b/themes/Sakura/_config.yml
@@ -6,13 +6,13 @@ favicon: /images/favicon.ico
 avatar: /img/custom/amtoaer.png
 url: https://allwens.work
 description: 今宵酒醒何处？杨柳岸，晓风残月。
-cdn: //allwens-work.oss-cn-beijing.aliyuncs.com
+cdn: //cdn.jsdelivr.net/gh/amtoaer/blogcdn@master
 pjax: 1
 # 1开启
 mathjax: 1
 
 notice: 这是文文的个人博客，欢迎来访！
-lazyloadImg: //cdn.jsdelivr.net/gh/amtoaer/blog-cdn@2.2/img/loader/orange.progress-bar-stripe-loader.svg
+lazyloadImg: //cdn.jsdelivr.net/gh/amtoaer/blogcdn@master/img/loader/orange.progress-bar-stripe-loader.svg
 
 menus:
   首页: { path: /, fa: fa-fort-awesome faa-shake }
@@ -88,9 +88,8 @@ msocial:
   twitter: {url: https://twitter.com/amtoaer, fa: fa-twitter, color: 333}
 
 donate:
-  # paypal: https://www.paypal.me/hojuncn
-  alipay: /images/alipay.png
-  wechat: /images/wechatpay.png
+  alipay: /img/donate/alipay.png
+  wechat: /img/donate/wechatpay.png
   # wechatSQ: /img/custom/donate/WeChanSQ.jpg
 
 # 视频地址为https://cdn.jsdelivr.net/gh/honjun/hojun@1.2/Unbroken.mp4，配置如下
