--- a/themes/Sakura/_config.yml
+++ b/themes/Sakura/_config.yml
@@ -57,7 +57,7 @@ bg:
   - https://cdn.jsdelivr.net/gh/volantis-x/cdn-wallpaper-minimalist/2020/056.jpg
 
 # 背景图片样式 空 原图效果 filter-dim 阴影 filter-grid 横条 filter-dot 点点
-bgclass: filter-dot
+bgclass: 
 
 # startdash url, title, desc img
 startdash: 
