换用pure轻雨图标

--- a/themes/Sakura/_config.yml
+++ b/themes/Sakura/_config.yml
@@ -72,14 +72,14 @@ siteBuildingTime: 07/12/2018
 
 #social  url, img PC端配置
 social:
-  github: {url: http://github.com/amtoaer, img: /img/social/github.svg}
-  netease-music: {url: https://music.163.com/#/user/home?id=413148812, img: /img/social/netease-cloud-music-fill.svg}
-  telegram: {url: https://t.me/JeasonLau, img: /img/social/telegram.svg}
-  twitter: {url: https://twitter.com/amtoaer, img: /img/social/twitter.svg}
-  bilibili: {url: https://space.bilibili.com/9183758, img: /img/social/bilibili.svg}
-  instagram: {url: https://www.instagram.com/amtoaer/, img: /img/social/instagram.svg}
-  zhihu: {url: https://www.zhihu.com/people/ba-qi-chao-qun-zhu, img: /img/social/zhihu.svg}
-  email: {url: mailto:amtoaer@outlook.com, img: /img/social/email.svg}
+  github: {url: http://github.com/amtoaer, img: /img/social/github.png}
+  netease-music: {url: https://music.163.com/#/user/home?id=413148812, img: /img/social/netease_music.png}
+  telegram: {url: https://t.me/JeasonLau, img: /img/social/telegram.png}
+  twitter: {url: https://twitter.com/amtoaer, img: /img/social/twitter.png}
+  bilibili: {url: https://space.bilibili.com/9183758, img: /img/social/bilibili.png}
+  instagram: {url: https://www.instagram.com/amtoaer/, img: /img/social/instagram.png}
+  zhihu: {url: https://www.zhihu.com/people/ba-qi-chao-qun-zhu, img: /img/social/zhihu.png}
+  email: {url: mailto:amtoaer@outlook.com, img: /img/social/email.png}
 
 #social  url, img 移动端配置
 msocial:
